--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
@@ -8,7 +8,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-sm-10 col-md-10 col-lg-10 row-title">
-                        <span id={{ profile.id }} class=showEllipsisFor1TextLine>{{ profile.title }}&nbsp;</span>
+                        <span id="{{ profile.id }}" class=showEllipsisFor1TextLine>{{ profile.title }}&nbsp;</span>
                     </div>
                     <div class="col-sm-2 col-md-2 col-lg-2 row-ellipsis" title="View profile options">
                         <div id="{{ profile.id }}" class="pull-right ellipsisDiv">
